--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,42 +1,42 @@
 /* Roboto */
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Thin';
     src: url(../assets/fonts/Roboto/Roboto-Thin.ttf) format('truetype');
     font-style: normal;
     font-weight: 100;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Thintalic';
     src: url(../assets/fonts/Roboto/Roboto-ThinItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 100;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Light';
     src: url(../assets/fonts/Roboto/Roboto-Light.ttf) format('truetype');
     font-style: normal;
     font-weight: 300;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-LightItalic';
     src: url(../assets/fonts/Roboto/Roboto-LightItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 300;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Regular';
     src: url(../assets/fonts/Roboto/Roboto-Regular.ttf) format('truetype');
     font-style: normal;
     font-weight: 400;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Medium';
     src: url(../assets/fonts/Roboto/Roboto-Medium.ttf) format('truetype');
     font-style: normal;
     font-weight: 500;
@@ -44,35 +44,35 @@
 
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-MediumItalic';
     src: url(../assets/fonts/Roboto/Roboto-MediumItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 500;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Bold';
     src: url(../assets/fonts/Roboto/Roboto-Bold.ttf) format('truetype');
     font-style: normal;
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-BoldItalic';
     src: url(../assets/fonts/Roboto/Roboto-BoldItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Black';
     src: url(../assets/fonts/Roboto/Roboto-Black.ttf) format('truetype');
     font-style: normal;
     font-weight: 900;
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-BlackItalic';
     src: url(../assets/fonts/Roboto/Roboto-BlackItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 900;
@@ -81,77 +81,77 @@
 /* Mali */
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-ExtraLight';
     src: url(../assets/fonts/Mali/Mali-ExtraLight.ttf) format('truetype');
     font-style: normal;
     font-weight: 200;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-ExtraLightItalic';
     src: url(../assets/fonts/Mali/Mali-ExtraLightItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 200;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-Light';
     src: url(../assets/fonts/Mali/Mali-Light.ttf) format('truetype');
     font-style: normal;
     font-weight: 300;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-Italic';
     src: url(../assets/fonts/Mali/Mali-LightItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 300;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-Regular';
     src: url(../assets/fonts/Mali/Mali-Regular.ttf) format('truetype');
     font-style: normal;
     font-weight: 400;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-Medium';
     src: url(../assets/fonts/Mali/Mali-Medium.ttf) format('truetype');
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-MediumItalic';
     src: url(../assets/fonts/Mali/Mali-MediumItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 500;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-SemiBold';
     src: url(../assets/fonts/Mali/Mali-SemiBold.ttf) format('truetype');
     font-style: normal;
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-SemiBoldItalic';
     src: url(../assets/fonts/Mali/Mali-SemiBoldItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-Bold';
     src: url(../assets/fonts/Mali/Mali-Bold.ttf) format('truetype');
     font-style: normal;
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'Mali';
+    font-family: 'Mali-BoldItalic';
     src: url(../assets/fonts/Mali/Mali-BoldItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 700;
