Complete CV's right pane -- Must restructure `styles` folder

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 @import url('./fonts.css');
 @import url('./normaliser.css');
-@import url('./CV.css');
+@import url('./CV/CV.css');
 
 .App {
     display: flex;
