--- a/src/styles/Form/FormManager.css
+++ b/src/styles/Form/FormManager.css
@@ -1,19 +1,21 @@
 .form-manager {
+    align-items: flex-start;
+    background-color: var(--clr-grey-100);
     display: flex;
     flex-direction: column;
     gap: var(--l);
+    height: 100%;
     justify-content: flex-start;
-    align-items: flex-start;
     padding: var(--l);
-    width: 60%;
     max-width: 1200px;
     min-width: fit-content;
-    height: 100%;
-    background-color: var(--clr-grey-100);
+    width: 60%;
 }
 
-.form {
-    width: 100%;
+@media (max-width: 500px) {
+    .form-manager {
+        gap: var(--m);
+    }
 }
 
 .hook-and-counter {
@@ -22,6 +24,11 @@
     gap: var(--s);
 }
 
+.hook-text {
+    color: var(--clr-grey-700);
+    font-family: 'Roboto-Regular';
+    font-size: var(--fs-hook);
+}
 
 .counter-box {
     align-items: center;
@@ -40,20 +47,18 @@
 }
 
 .counter-number {
-    color: white;
+    color: var(--clr-white);
     display: grid;
-    font-size: var(--s);
     font-family: 'Roboto-Regular';
+    font-size: var(--fs-counter);
     place-content: center;
 }
 
 .counter-title {
     font-family: 'Roboto-Medium';
-    font-size: clamp(1rem, 3vw, 2rem);
+    font-size: var(--fs-counter);
 }
 
-.hook-text {
-    color: var(--clr-grey-700);
-    font-size: clamp(1.5rem, 5vw, 3rem);
-    font-family: 'Roboto-Regular';
+.form {
+    width: 100%;
 }
