--- a/src/styles/Form/Frame/Frame.css
+++ b/src/styles/Form/Frame/Frame.css
@@ -5,7 +5,7 @@
     height: 100%;
 }
 
-.section-and-side-background {
+.section-and-side {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -13,22 +13,12 @@
     width: 100%;
 }
 
-.section-and-side-background.reverted {
+.section-and-side_Education {
     flex-direction: row-reverse;
 }
 
-.side-background-image {
-    background-size: cover;
-    width: clamp(500px, 40%, 1500px);
-    height: 100%;
-}
-
-.side-background-image.reverted {
-    transform: scaleX(-1);
-}
-
 @media (min-width: 2000px) {
-    .section-and-side-background {
+    .section-and-side {
         gap: var(--l);
     }
 }
