--- a/src/styles/shared/fonts.css
+++ b/src/styles/shared/fonts.css
@@ -2,42 +2,42 @@
 
 @font-face {
     font-family: 'Roboto-Thin';
-    src: url(../assets/fonts/Roboto/Roboto-Thin.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-Thin.ttf) format('truetype');
     font-style: normal;
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'Roboto-Thintalic';
-    src: url(../assets/fonts/Roboto/Roboto-ThinItalic.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-ThinItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'Roboto-Light';
-    src: url(../assets/fonts/Roboto/Roboto-Light.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-Light.ttf) format('truetype');
     font-style: normal;
     font-weight: 300;
 }
 
 @font-face {
     font-family: 'Roboto-LightItalic';
-    src: url(../assets/fonts/Roboto/Roboto-LightItalic.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-LightItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 300;
 }
 
 @font-face {
     font-family: 'Roboto-Regular';
-    src: url(../assets/fonts/Roboto/Roboto-Regular.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-Regular.ttf) format('truetype');
     font-style: normal;
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'Roboto-Medium';
-    src: url(../assets/fonts/Roboto/Roboto-Medium.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-Medium.ttf) format('truetype');
     font-style: normal;
     font-weight: 500;
 }
@@ -45,35 +45,35 @@
 
 @font-face {
     font-family: 'Roboto-MediumItalic';
-    src: url(../assets/fonts/Roboto/Roboto-MediumItalic.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-MediumItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'Roboto-Bold';
-    src: url(../assets/fonts/Roboto/Roboto-Bold.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-Bold.ttf) format('truetype');
     font-style: normal;
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'Roboto-BoldItalic';
-    src: url(../assets/fonts/Roboto/Roboto-BoldItalic.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-BoldItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'Roboto-Black';
-    src: url(../assets/fonts/Roboto/Roboto-Black.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-Black.ttf) format('truetype');
     font-style: normal;
     font-weight: 900;
 }
 
 @font-face {
     font-family: 'Roboto-BlackItalic';
-    src: url(../assets/fonts/Roboto/Roboto-BlackItalic.ttf) format('truetype');
+    src: url(../../assets/fonts/Roboto/Roboto-BlackItalic.ttf) format('truetype');
     font-style: italic;
     font-weight: 900;
 }
