--- a/src/styles/elements/Inputs.css
+++ b/src/styles/elements/Inputs.css
@@ -14,6 +14,7 @@ input[type='date']::placeholder {
     gap: var(--xs);
     height: 100%;
     min-width: var(--max-width-input);
+    min-height: 110px;
     padding: var(--xs);
     width: 100%;
 }
