--- a/src/styles/Form/GeneralInformation.css
+++ b/src/styles/Form/GeneralInformation.css
@@ -1,13 +1,14 @@
-.general-information {
-    justify-content: center;
+.section.GeneralInformation {
     display: flex;
+    justify-content: center;
     height: 100%;
     width: 100%;
 }
 
-.general-information>form {
+.section.GeneralInformation>form {
     align-items: center;
     display: grid;
+    gap: var(--s);
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     grid-template-rows: repeat(7, 0.1fr);
     grid-template-areas:
@@ -18,51 +19,50 @@
         'country country'
         'introduction introduction'
         'nextSection nextSection';
+    min-width: var(--min-width-form);
     width: 100%;
-    min-width: 250px;
-    gap: var(--s);
 }
 
-.general-information>form>div:first-child {
+.section.GeneralInformation>form>div:first-child {
     grid-area: firstName;
 }
 
-.general-information>form>div:nth-child(2) {
+.section.GeneralInformation>form>div:nth-child(2) {
     grid-area: lastName;
 }
 
-.general-information>form>div:nth-child(3) {
+.section.GeneralInformation>form>div:nth-child(3) {
     grid-area: phone;
 }
 
-.general-information>form>div:nth-child(4) {
+.section.GeneralInformation>form>div:nth-child(4) {
     grid-area: email;
 }
 
-.general-information>form>div:nth-child(5) {
+.section.GeneralInformation>form>div:nth-child(5) {
     grid-area: birthdate;
 }
 
-.general-information>form>div:nth-child(6) {
+.section.GeneralInformation>form>div:nth-child(6) {
     grid-area: workField;
 }
 
-.general-information>form>div:nth-child(7) {
+.section.GeneralInformation>form>div:nth-child(7) {
     grid-area: home;
 }
 
-.general-information>form>div:nth-child(8) {
+.section.GeneralInformation>form>div:nth-child(8) {
     grid-area: city;
 }
 
-.general-information>form>div:nth-child(9) {
+.section.GeneralInformation>form>div:nth-child(9) {
     grid-area: country;
 }
 
-.general-information>form>div:nth-child(10) {
+.section.GeneralInformation>form>div:nth-child(10) {
     grid-area: introduction;
 }
 
-.general-information>form>div:nth-child(11) {
+.section.GeneralInformation>form>div:nth-child(11) {
     grid-area: nextSection;
 }
