--- a/src/styles/Form/MultipleEntries.css
+++ b/src/styles/Form/MultipleEntries.css
@@ -8,7 +8,7 @@
     width: 100%;
 }
 
-.multiple-entries_Career>form {
+.multiple-entries.Career>form {
     display: grid;
     font-family: 'Roboto-Light';
     gap: var(--m);
@@ -44,7 +44,7 @@
 }
 
 .conditional-checkbox__label {
-    font-size: var(--fs-input);
+    font-size: var(--fs-sm);
 }
 
 .conditional-checkbox::before {
@@ -108,7 +108,7 @@
     grid-row: 5;
 }
 
-.entries-viewer_Career {
+.entries-viewer.Career {
     align-items: center;
     display: grid;
     gap: var(--s);
@@ -116,6 +116,32 @@
     justify-content: space-evenly;
     height: fit-content;
     width: 100%;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(2) {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(5) {
+    grid-column: 1/3;
+    grid-row: 3;
+    justify-self: center;
 }
 
 .entry-box {
@@ -174,12 +200,6 @@
     width: 15px;
 }
 
-.add-entry.disabled,
-.add-entry.disabled>* {
-    background-color: var(--clr-grey-200);
-    pointer-events: none;
-}
-
 .entry-control-buttons {
     display: flex;
     gap: var(--xxs);
@@ -215,34 +235,7 @@
     background-color: var(--clr-remove);
 }
 
-.entries-viewer_Career>.entry-box:nth-child(1) {
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.entries-viewer_Career>.entry-box:nth-child(2) {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.entries-viewer_Career>.entry-box:nth-child(3) {
-    grid-column: 1;
-    grid-row: 2;
-}
-
-.entries-viewer_Career>.entry-box:nth-child(4) {
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.entries-viewer_Career>.entry-box:nth-child(5) {
-    grid-column: 1/3;
-    grid-row: 3;
-    justify-self: center;
-}
-
 @media (max-width: 500px) {
-
     .entry-box {
         flex-direction: column-reverse;
         gap: var(--xs);
