--- a/src/styles/elements/Inputs.css
+++ b/src/styles/elements/Inputs.css
@@ -1,5 +1,5 @@
 input[type='date']::placeholder {
-    font-size: var(--fs-input);
+    font-size: var(--fs-sm);
     opacity: 30%;
 }
 
@@ -10,25 +10,25 @@ input[type='date']::placeholder {
     box-shadow: var(--box-shadow);
     display: flex;
     flex-direction: column;
-    font-size: var(--fs-input);
+    font-size: var(--fs-sm);
     gap: var(--xs);
     height: 100%;
     min-width: var(--max-width-input);
-    min-height: 110px;
+    min-height: var(--min-height-reg-input);
     padding: var(--xs);
     width: 100%;
 }
 
 .input-box__label,
 .textbox__label {
-    font-family: 'Roboto-Medium';
     color: var(--clr-grey-500);
+    font-family: 'Roboto-Medium';
 }
 
 .input-box__field,
 .textbox__field {
     border: none;
-    font-size: var(--fs-input);
+    font-size: var(--fs-sm);
 }
 
 .input-box__field:focus,
@@ -38,7 +38,7 @@ input[type='date']::placeholder {
 
 .input-box__field::placeholder,
 .textbox__field::placeholder {
-    font-size: var(--fs-input);
+    font-size: var(--fs-sm);
     opacity: 30%;
     text-overflow: ellipsis;
 }
@@ -77,7 +77,7 @@ input[type='date']::placeholder {
 .feedback {
     color: var(--clr-grey-400);
     font-family: 'Roboto-Regular';
-    font-size: calc(12px + 0.390625vw);
+    font-size: var(--fs-sm);
 }
 
 .error {
@@ -86,13 +86,13 @@ input[type='date']::placeholder {
 }
 
 .correctInput {
-    outline: 1px solid var(--clr-success);
-}
-
-.incorrectInput {
-    outline: 1px solid var(--clr-error)
+    outline: var(--br-rad-xs) solid var(--clr-success);
 }
 
 .focusedInput {
-    outline: 1px solid var(--clr-focus)
+    outline: var(--br-rad-xs) solid var(--clr-focus)
+}
+
+.incorrectInput {
+    outline: var(--br-rad-xs) solid var(--clr-error)
 }
