--- a/src/styles/Form/MultipleEntries.css
+++ b/src/styles/Form/MultipleEntries.css
@@ -8,13 +8,8 @@
     width: 100%;
 }
 
-.multiple-entries.Career>form {
-    display: grid;
+form {
     font-family: 'Roboto-Light';
-    gap: var(--m);
-    grid-template-columns: auto auto;
-    grid-template-rows: repeat(5, clamp(80px, 10vh, 100px));
-    height: 100%;
 }
 
 .conditional-checkbox-group {
@@ -67,83 +62,6 @@
     background-color: var(--clr-grey-200);
 }
 
-.status {
-    display: flex;
-    grid-column: 1 / 3;
-    grid-row: 1;
-}
-
-.establishment {
-    grid-column: 1;
-    grid-row: 2;
-}
-
-.context {
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.startDate {
-    grid-row: 3;
-    grid-column: span 2;
-    width: 100%;
-}
-
-.endDate {
-    grid-column: 2;
-    grid-row: 3;
-}
-
-.endDate+.startDate {
-    grid-column: 1;
-}
-
-.description {
-    grid-column: 1 / 3;
-    grid-row: 4;
-}
-
-.saveEntry {
-    grid-column: 1;
-    grid-row: 5;
-}
-
-.entries-viewer.Career {
-    align-items: center;
-    display: grid;
-    gap: var(--s);
-    grid-template-rows: repeat(3, auto);
-    justify-content: space-evenly;
-    height: fit-content;
-    width: 100%;
-}
-
-.entries-viewer.Career>.entry-box:nth-child(1) {
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.entries-viewer.Career>.entry-box:nth-child(2) {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.entries-viewer.Career>.entry-box:nth-child(3) {
-    grid-column: 1;
-    grid-row: 2;
-}
-
-.entries-viewer.Career>.entry-box:nth-child(4) {
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.entries-viewer.Career>.entry-box:nth-child(5) {
-    grid-column: 1/3;
-    grid-row: 3;
-    justify-self: center;
-}
-
 .entry-box {
     align-items: center;
     background-color: var(--clr-grey-300);
@@ -151,9 +69,9 @@
     color: var(--clr-white);
     display: flex;
     font-family: 'Roboto-Medium';
-    height: var(--height-btn-m);
+    height: var(--min-height-reg-btn);
     justify-content: center;
-    width: clamp(150px, 15vw, 350px);
+    width: clamp(150px, 25vw, 350px);
 }
 
 .entry-fields {
@@ -170,8 +88,8 @@
 .entry-manager {
     align-items: center;
     background-color: var(--clr-grey-400);
-    border-bottom-right-radius: var(---br-rad-m);
-    border-top-right-radius: var(---br-rad-m);
+    border-bottom-right-radius: var(--br-rad-m);
+    border-top-right-radius: var(--br-rad-m);
     display: flex;
     flex-direction: column;
     gap: var(--s);
@@ -218,37 +136,175 @@
     width: var(--size-btn-s);
 }
 
-.edit {
+.button.edit {
     background-image: url('../../assets/MultipleSections/edit.png');
 }
 
 
-.edit:hover {
+.button.edit:hover {
     background-color: var(--clr-edit);
 }
 
-.remove {
+.button.remove {
     background-image: url('../../assets/MultipleSections/delete.png');
 }
 
-.remove:hover {
+.button.remove:hover {
     background-color: var(--clr-remove);
 }
 
-@media (max-width: 500px) {
+.multiple-entries.Career>form,
+.multiple-entries.Education>form {
+    display: grid;
+    gap: var(--m);
+    grid-template-columns: auto auto;
+    grid-template-rows: repeat(5, clamp(80px, 10vh, var(--min-height-reg-input)));
+    height: 100%;
+}
+
+.multiple-entries.Hobbies>form,
+.multiple-entries.Tools>form,
+.multiple-entries.Languages>form {
+    display: grid;
+    row-gap: var(--m);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, clamp(80px, 10vh, 200px));
+    height: 100%;
+    justify-content: stretch;
+    width: 100%;
+}
+
+.status {
+    display: flex;
+    grid-column: 1 / 3;
+    grid-row: 1;
+}
+
+.establishment {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.context {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.startDate {
+    grid-row: 3;
+    grid-column: span 2;
+    width: 100%;
+}
+
+.endDate {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.endDate+.startDate {
+    grid-column: 1;
+}
+
+.description {
+    grid-column: 1 / 3;
+    grid-row: 4;
+}
+
+.saveEntry {
+    grid-column: 1;
+    grid-row: 5;
+}
+
+.extra {
+    grid-row: 1;
+    justify-self: stretch;
+}
+
+.proficiency {
+    grid-row: 2;
+}
+
+.entries-viewer.Career,
+.entries-viewer.Education {
+    align-items: center;
+    display: grid;
+    gap: var(--s);
+    grid-template-rows: repeat(3, auto);
+    justify-content: space-evenly;
+    min-height: fit-content;
+    width: 100%;
+}
+
+.entries-viewer.Hobbies,
+.entries-viewer.Tools,
+.entries-viewer.Languages {
+    align-items: center;
+    display: grid;
+    gap: var(--s);
+    grid-template-rows: repeat(3, auto);
+    justify-items: center;
+    min-height: fit-content;
+    width: 100%;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(1),
+.entries-viewer.Education>.entry-box:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(2) {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.entries-viewer.Education>.entry-box:nth-child(2) {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.entries-viewer.Career>.entry-box:nth-child(5) {
+    grid-column: 1/3;
+    grid-row: 3;
+    justify-self: center;
+}
+
+.entries-viewer.Hobbies>.entry-box:nth-child(1),
+.entries-viewer.Tools>.entry-box:nth-child(1),
+.entries-viewer.Languages>.entry-box:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.entries-viewer.Hobbies>.entry-box:nth-child(2),
+.entries-viewer.Tools>.entry-box:nth-child(2),
+.entries-viewer.Languages>.entry-box:nth-child(2) {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.entries-viewer.Hobbies>.entry-box:nth-child(3),
+.entries-viewer.Tools>.entry-box:nth-child(3),
+.entries-viewer.Languages>.entry-box:nth-child(3) {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+@media (max-width: 1000px) {
     .entry-box {
         flex-direction: column-reverse;
         gap: var(--xs);
         justify-content: flex-end;
-    }
-
-    .entry-fields {
-        display: flex;
-        gap: var(--xxs);
-    }
-
-    .entry-control-buttons {
-        width: fit-content;
     }
 
     .entry-manager {
@@ -258,5 +314,14 @@
         gap: var(--xs);
         height: 40px;
         justify-self: flex-end;
+    }
+
+    .entry-fields {
+        display: flex;
+        gap: var(--xxs);
+    }
+
+    .entry-control-buttons {
+        width: fit-content;
     }
 }
