--- a/src/styles/elements/Buttons.css
+++ b/src/styles/elements/Buttons.css
@@ -7,6 +7,8 @@
 }
 
 .button {
+    appearance: none;
+    border: none;
     color: var(--clr-white);
     font-size: var(--fs-sm);
 }
@@ -20,11 +22,13 @@
     cursor: pointer;
 }
 
-.next-section,
-.skip-section,
-.confirm-crop,
-.retry-button,
-.save-entry {
+.next-section.button,
+.skip-section.button,
+.confirm-crop.button,
+.retry.button,
+.save-entry.button,
+.download.button,
+.save-reviewed-section.button {
     background-color: var(--clr-btn);
     border: none;
     grid-column: 1/3;
@@ -33,16 +37,21 @@
     width: 100%;
 }
 
-.retry-button,
-.save-entry {
+.save-reviewed-section.button {
+    min-height: 80px;
+}
+
+.retry.button,
+.save-entry.button,
+.save-reviewed-section.button {
     background-color: var(--clr-accent);
 }
 
-.confirm-crop {
+.confirm-crop.button {
     background-color: var(--clr-grey-400);
 }
 
-.add-entry {
+.add-entry.button {
     align-items: center;
     background-color: var(--clr-accent);
     border: none;
@@ -53,6 +62,7 @@
     max-height: var(--size-btn-add);
     min-width: 200px;
     padding-right: var(--s);
+    position: relative;
     width: fit-content;
 }
 
@@ -79,7 +89,7 @@
 }
 
 
-.add-entry.disabled,
+.add-entry.button.disabled,
 .add-entry.disabled>* {
     background-color: var(--clr-grey-200);
     pointer-events: none;
@@ -95,8 +105,9 @@
         width: var(--size-btn-add_mobile);
     }
 
-    .add-entry {
-        min-width: fit-content;
+    .add-entry.button {
+        min-height: var(--size-btn-add_mobile);
+        min-width: var(--size-btn-add_mobile);
         padding-right: 0;
     }
 }
