--- a/src/styles/CV/RightPane.css
+++ b/src/styles/CV/RightPane.css
@@ -4,39 +4,63 @@
     grid-column: 2;
     align-content: space-evenly;
     justify-items: center;
-    border-left: 1px solid var(--clr-grey-l);
+    border-left: 1px solid var(--cv_clr-grey-l);
 }
 
 .CV__right-pane__section {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: var(--gap-s);
+    gap: var(--cv_gap-s);
     max-width: 100px;
-
 }
 
 .CV__details-group {
     display: flex;
     flex-direction: column;
-    gap: var(--gap-s);
+    gap: var(--cv_gap-s);
 }
 
-.CV__details-group>p:last-child {
-    color: var(--clr-accent);
+.CV__details-group p {
+    max-width: 25ch;
+    max-height: 7ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: wrap;
 }
+
+.CV__details-group>p:nth-child(2),
+.CV__details-group>p:nth-child(4),
+.CV__details-group>p:last-child {
+    word-break: break-all;
+    white-space: normal;
+    overflow: hidden;
+}
+
+.CV__details-group>p:nth-child(5),
+.CV__details-group>p:last-child {
+    color: var(--cv_clr-accent);
+    line-break: strict;
+}
+
 
 .CV__skills-group {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: var(--gap-m);
+    gap: var(--cv_gap-m);
+}
+
+.CV__skills-group .CV__entry-text {
+    width: 20ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .CV__name-and-skill {
     display: flex;
     flex-direction: column;
-    gap: var(--gap-s);
+    gap: var(--cv_gap-s);
 }
 
 /* Progress Bar */
@@ -44,11 +68,11 @@
 .progress-bar {
     height: 3px;
     width: 100px;
-    background-color: var(--clr-grey-l);
+    background-color: var(--cv_clr-grey-l);
 }
 
 .progress-bar.level-5 {
-    background-color: var(--clr-accent);
+    background-color: var(--cv_clr-accent);
 }
 
 .progress-bar.level-4::after {
@@ -56,7 +80,7 @@
     content: '';
     width: 90px;
     height: 3px;
-    background-color: var(--clr-accent);
+    background-color: var(--cv_clr-accent);
 }
 
 .progress-bar.level-3::after {
@@ -64,7 +88,7 @@
     content: '';
     width: 80px;
     height: 3px;
-    background-color: var(--clr-accent);
+    background-color: var(--cv_clr-accent);
 }
 
 .progress-bar.level-2::after {
@@ -72,7 +96,7 @@
     content: '';
     width: 70px;
     height: 3px;
-    background-color: var(--clr-accent);
+    background-color: var(--cv_clr-accent);
 }
 
 .progress-bar.level-1::after {
@@ -80,5 +104,5 @@
     content: '';
     width: 60px;
     height: 3px;
-    background-color: var(--clr-accent);
+    background-color: var(--cv_clr-accent);
 }
