--- a/src/styles/Form/MultipleEntries.css
+++ b/src/styles/Form/MultipleEntries.css
@@ -158,7 +158,7 @@ form {
     display: grid;
     gap: var(--m);
     grid-template-columns: auto auto;
-    grid-template-rows: repeat(5, clamp(80px, 10vh, var(--min-height-reg-input)));
+    grid-template-rows: repeat(5, clamp(fit-content, 10vh, var(--min-height-reg-input)));
     height: 100%;
 }
 
@@ -324,4 +324,13 @@ form {
     .entry-control-buttons {
         width: fit-content;
     }
+
+    .multiple-entries.Career>form,
+    .multiple-entries.Education>form {
+        grid-template-rows: repeat(4, 110px) 80px;
+        height: 100%;
+        row-gap: var(--s);
+
+    }
+
 }
