//Project completed// Build a home page

--- a/src/styles/Form/Download.css
+++ b/src/styles/Form/Download.css
@@ -12,7 +12,7 @@
     background-color: var(--clr-accent);
 }
 
-.CV-mock {
+.section.download .CV-mock {
     box-shadow: var(--box-shadow);
     width: 100%;
 }
