--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,7 @@
 @import url('./Form/Review.css');
 @import url('./Form/Download.css');
 @import url('./CV/CV.css');
+@import url('./HomePage/HomePage.css');
 
 body {
     background-color: var(--clr-grey-100);
