--- a/src/styles/CV/RightPane.css
+++ b/src/styles/CV/RightPane.css
@@ -3,14 +3,15 @@
     grid-template-rows: repeat(4, 150px);
     grid-column: 2;
     align-content: space-evenly;
-    justify-items: center;
+    justify-items: flex-start;
+    justify-content: center;
     border-left: 1px solid var(--cv_clr-grey-l);
 }
 
 .CV__right-pane__section {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     gap: var(--cv_gap-s);
     max-width: 100px;
 }
@@ -61,6 +62,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--cv_gap-s);
+
 }
 
 /* Progress Bar */
