--- a/src/styles/CV/CV.css
+++ b/src/styles/CV/CV.css
@@ -44,6 +44,83 @@
     color: var(--cv_clr-grey-r);
 }
 
+#CV-mock__picture {
+    animation: appear 3s linear 1s 1 both;
+    opacity: 0;
+}
+
+.CV-mock__filled-bar {
+    fill: grey;
+    animation: grow 3s ease-in 1s 1 both;
+
+}
+
+.CV-mock__text-block {
+    animation: appear 3s ease-in 1s 1 both;
+    opacity: 0;
+}
+
+.CV-mock__text-block:hover,
+#CV-mock__picture:hover {
+    transform: scale(0.99);
+    fill: var(--clr-grey-200)
+}
+
+.CV-mock__bar:hover {
+    animation: shake 0.8s ease-in 1 both;
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes grow {
+    from {
+        fill: #e5e5e5;
+    }
+
+    to {
+        fill: #d9739c;
+    }
+}
+
+@keyframes shake {
+
+    0% {
+        transform: translateX(0);
+    }
+
+    15% {
+        transform: translateX(-1px)
+    }
+
+    30% {
+        transform: translateX(1px)
+    }
+
+    45% {
+        transform: translateX(-1px)
+    }
+
+    60% {
+        transform: translateX(1px)
+    }
+
+    75% {
+        transform: translateX(-1px)
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 @media (max-width: 650px) {
     .CV {
         position: absolute;
