--- a/src/styles/HomePage/HomePage.css
+++ b/src/styles/HomePage/HomePage.css
@@ -71,6 +71,27 @@
     min-width: 200px;
 }
 
+footer {
+    display: flex;
+    font-family: 'Roboto-Light';
+    font-size: 10px;
+    bottom: 0;
+    left: 50%;
+    right: 50%;
+    width: 100vw;
+    justify-content: center;
+    opacity: 0.5;
+}
+
+a > img {
+    width: 10px;
+}
+
+footer > a {
+    text-decoration: none;
+    color: var(--clr-white);
+}
+
 @media (max-width: 500px) {
     .home-screen__main__title {
         font-size: 24px;
